# superstore_project

./: .dockerignore  .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  docker_compose.yml  pyproject.toml
dags/: file_watcher_dag.py  superstore_etl.py
docs/grafana/: README.md
initdb/: init.sql
metabase_data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
notebooks/: work_with_superstore.ipynb
src/utils/: __init__.py  logger.py  metrics.py  snake_case.py
superstore_dbt/: .user.yml  dbt_project.yml  profiles.yml
superstore_dbt/models/core/: core_orders.sql  core_people.sql  core_returns.sql
superstore_dbt/models/mart/: _mart_docs.md  _mart_superstore.yml  _src_stg.yml  mart_dim_calendar.sql  mart_dim_customer.sql  mart_dim_geo.sql  mart_dim_managers.sql  mart_dim_orders.sql  mart_dim_product.sql  mart_dim_shipping.sql  mart_fct_sales.sql
superstore_dbt/tests/: check_count_rows_in_fct_sales.sql
